fixed horizontal scrolling issue by adding overflow-x: hidden & width: 100% to html and body elements

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,16 @@ html {
 *:after {
 	box-sizing: inherit;
 }
+
+html,
+body {
+	overflow-x: hidden;
+  width: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Helvetica';
+  font-size: 16px;
+}
